# Video-effects

./: CMakeLists.txt  CMakeLists_build.txt  README.md  ketch_video_build.cpp  sketch_video.cpp  sketch_video.py  video-sketch-workflow.yaml
.github/workflows/: C++.yml  Release.yml  build_build.yml  main.yml  release_build.yml  sekteck.yml
